# AGILE-AI-HTB

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CODE-REVIEW.md  CONTEXT.md  CONTRIBUTING.md  DEMO.md  DESIGN.md  Dockerfile  HARNESS.md  LICENSE  MANIFEST.in  PRODUCT.md  README.md  SECURITY.md  docker-compose.yml  guardrails.yaml  harness.db  harness.local.db  install.sh  pyproject.toml  render.yaml
.demo/: harness.db
.github/ISSUE_TEMPLATE/: bug_report.md  setup_support.md
.github/workflows/: ci.yml
.hermes/plans/: 2026-06-13_render-deploy.md
.hermes/review/: portal-candidates-2-4.diff
.obsidian/: workspace.json
demo/snip/: pyproject.toml
demo/snip/src/snip/: __init__.py  cli.py  store.py
demo/snip/tests/: test_scaffold.py
demo_tasks/: DEMO_2099_HARD_TASK_SCHEDULER.md  DEMO_2099_LONG_OPENCODE_COMPARISON_TASK.md  DEMO_2099_MEDIUM_TAG_RETRIEVER.md  DEMO_2099_SIMPLE_MD_LINK_CHECKER.md
docs/: DEMO.md  DEMO_2099_OPENCODE_COMPARISON_RUNBOOK.md  DEMO_VIDEO_SCRIPT.md  DEPLOY.md  GETTING_STARTED.md  GPT-5.4-MINI-LOCAL-DEMO.md  HARNESS-SUMMARY.md  HARNESS.md  IMPLEMENTATION-PLAN.md  INSTALL.md  LIVE_RUN_COCKPIT_PLAN.md  MCP_AGENT_HARNESS_TODO.md  OPENROUTER_CONTROL_PLANE_PLAN.md  PLANNING_CHAT_PLAN.md  PLAYWRIGHT_RECORDED_DEMO_IMPLEMENTATION_PLAN.md  PLAYWRIGHT_RECORDED_DEMO_PLAN.md  PRD.md  REACT_PORTAL_PARITY_PLAN.md  SETUP_SUPPORT_CHECKLIST.md  TODO.md  WORKER_ADAPTER_SETUP.md
docs/adr/: 0001-adopt-agile-ai-htb-identity.md  0001-openrouter-oauth-control-plane-front-door.md  0002-two-surface-orchestration-board.md  0003-decision-queue-state-model.md  0004-driver-based-token-estimation.md  0005-scout-tasks-replace-spike.md  0006-planning-chat-spec-kit-front-stages.md  0007-pi-orchestrator-runtime-proxy-governed.md  0008-spec-repo-artifact-content-ledger-split.md
docs/design/: planning-chat.md
docs/mockup/: README.md  alarms.html  estimate.html  index.html  portal-v2.html  proxy.html  sessions.html
docs/mockups/: setup-flow-2099.html
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  board-floor.css  live-events.js  main.jsx  nav.jsx  routes.js  tokens.css  useResource.js
frontend/tests/: board-error-retry.test.mjs  evidence-drawer-a11y.test.mjs  launch-failure.test.mjs  launch-help.test.mjs  live-worker-events.test.mjs  shell.test.mjs  ui-primitives.test.mjs
packaging/homebrew/: README.md  agile-ai-htb.rb.example  foreman-ai-hq.rb.example
scripts/: compare-opencode-demo-projects.py  docker-smoke.sh  local-opencode-readonly-demo.sh  local_runner_smoke.py  pipx-install-smoke.sh
src/agile_ai_htb/: __main__.py  adapter_readiness.py  alarms.py  app.py  auth.py  board_automation.py  board_workspace.py  checkpoints.py  cli.py  db.py  demo_seed.py  demo_worker.py  estimation.py  estimation_calibration.py  evidence_reporting.py  execution_backend.py  governance.py  guardrails.py  launch_guardrails.py  llm.py  model_routing.py  native_cli_diagnostics.py  native_usage.py  operator_config.py  project_context.py  repo_context.py  session_handoff.py  settings.py  task_breakdown.py  task_breakdown_handoff.py  task_launch.py  task_slicing_policy.py  template_context.py  tracking_modes.py  worker_adapters.py  worker_model_allowlist.py  worker_setup_view.py
src/foreman_ai_hq/: __main__.py  adapter_readiness.py  app.py  auth.py  board_automation.py  board_workspace.py  checkpoints.py  cli.py  db.py  demo_seed.py  demo_worker.py  estimate_decision.py  estimation.py  estimation_calibration.py  estimation_coefficients.py  evidence_reporting.py  execution_backend.py  governance.py  guardrails.py  launch_guardrails.py  llm.py  model_routing.py  native_cli_diagnostics.py  native_usage.py  needs_you.py  operator_config.py  pi_adapter.py  project_context.py  repo_context.py  session_handoff.py  settings.py  stream_events.py  task_breakdown.py  task_breakdown_handoff.py  task_kind.py  task_launch.py  task_slicing_policy.py  template_context.py  tracking_modes.py  worker_adapters.py  (+2 more)
src/token_tracker_harness/: app.py  auth.py  checkpoints.py  db.py  demo_seed.py  estimation.py  governance.py  settings.py
tests/: conftest.py  test_adapter_readiness.py  test_alarms.py  test_alarms_api.py  test_app.py  test_board_automation.py  test_budgeted_launch.py  test_checkpoints.py  test_cli_entrypoint.py  test_db.py  test_demo_fake_data_invariants.py  test_demo_seed.py  test_demo_worker.py  test_estimation_coefficients.py  test_eval_alarm_firing.py  test_eval_estimator.py  test_eval_proxy_token_tracking.py  test_eval_zone_transitions.py  test_governance.py  test_guardrails.py  test_launch_guardrails.py  test_llm_adapter.py  test_local_execution_backend.py  test_mockup_fixtures.py  test_operator_packaging.py  test_portal.py  test_project_metadata.py  test_project_setup.py  test_proxy_api.py  test_proxy_streaming.py  test_sessions_api.py  test_settings.py  test_tasks_api.py  test_worker_adapter_verification.py  test_worker_adapters.py  test_write_capable_launch.py
tests/api/: test_alarms.py  test_proxy.py  test_proxy_streaming.py  test_scout_concurrency.py  test_scout_read_only_launch.py  test_scout_reestimate_adversarial.py  test_sessions.py  (+4 more)
(+793 files in other folders)
