[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agile-ai-htb"
version = "0.1.0"
description = "A token-budget governance harness for AI coding agents."
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "pyyaml",
    "jinja2",
    "python-multipart",
    "litellm",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
# Honor the project's standing rule that demo-data invariant suites are
# named <DemoName>FakeDataInvariantTests (not the default Test*).
# pytest's python_classes option is startswith-based, so we use __test__
# = True on those classes instead of fighting the default.
