[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "foreman-ai-hq"
version = "0.1.0"
description = "A token-budget governance harness for AI coding agents."
authors = [{ name = "Alex Dancer" }]
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["ai", "agent", "governance", "token-tracking", "harness"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "pyyaml",
    "jinja2",
    "python-multipart",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "playwright",
]

[project.scripts]
foremanctl = "foreman_ai_hq.cli:main"

[project.urls]
Homepage = "https://github.com/alexdancer/foreman-ai-hq"
Repository = "https://github.com/alexdancer/foreman-ai-hq"
Issues = "https://github.com/alexdancer/foreman-ai-hq/issues"
Changelog = "https://github.com/alexdancer/foreman-ai-hq/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
foreman_ai_hq = [
    "templates/*.html",
    "defaults/*.yaml",
    "data/*.json",
    "orchestrator/pi/profile/*.json",
    "static/react/*",
    "static/react/assets/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
# Honor the project's standing rule that demo-data invariant suites are
# named <DemoName>FakeDataInvariantTests (not the default Test*).
# pytest's python_classes option is startswith-based, so we use __test__
# = True on those classes instead of fighting the default.
