[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "demo-snip-2099"
version = "0.1.0"
description = "DEMO synthetic scaffold for the Token Tracker Harness snippet manager demo."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
snip = "snip.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
